--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pyrogram<=2.0.106
-tgcrypto<=1.2.3
-aiohttp<=3.8.1
-python-dotenv<=0.20.0
+tgcrypto==1.2.5
+aiohttp==3.10.11
+python-dotenv==0.21.1
 motor
 aiofiles
 dnspython
